Fixes styling issue with footer inclusion icons not being aligned evenly

--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -19,7 +19,6 @@
   li {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
 
